# deep

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  calc.c  calc.h  cmake_install.cmake  do_statistic.c  header.h  in.txt  main.c  one_process.c  proj.h  project  project.cbp  run_and_write.c  structs.h  test_10000.c  tester.out  tests.c  tests.h
Testing/Temporary/: CTestCostData.txt
iz2/: do_statistic.c  header.h  list.c  main.c  run_and_write.c  structs.h  test_10000.c
linters/: run.sh
tests/: test.cpp
travis/: install-linux.sh
